functions fixed - dark mode to be fixed

--- a/index.css
+++ b/index.css
@@ -16,7 +16,13 @@ div#searchBox, div#listBox {
    border: 1pt solid #95BEF0;
    width: 80%;
 }
-div#searchBox { margin-top: 1em; }
+div#searchBox { 
+   margin-top: 1em; 
+   display: flex;
+   flex-wrap: wrap;
+   align-items:center;
+   justify-content:space-between;
+}
 div#listBox { 
    margin-top: 1em; 
    background-color: #FAFCFF;
@@ -72,8 +78,8 @@ img {
 }
 
 img#cart {
-   height: 10%;
-   width: 10%;
+   height: 30px;
+   width: 20px;
 }
 @media 
 only screen and (max-width: 967px),
